fix overlap menu

--- a/src/App.css
+++ b/src/App.css
@@ -798,7 +798,7 @@ body{
 }
 /* ESPACIO PARA BOTON H² */
 
-@media(min-width:700px) and (max-width:1200px){
+@media(min-width:700px) and (max-width:1100px){
 
   .top-title{
 
